# C0-Compiler

./: C0.cabal  README.md
examples/: example1.c0  example10.c0  example2.c0  example3.c0  example4.c0  example5.c0  example6.c0  example7.c0  example8.c0  example9.c0
examples/outputs/: output10.txt  output2.txt  output4.txt  output9.txt
outputs/: output1.txt  output3.txt  output5.txt  output6.txt
src/: AST.hs  FinalCode.hs  IntermCode.hs  Lexer.x  LexerTest.cabal  Main.hs  Parser.y  TestLexer.hs  Typecheck.hs
