
name:                C0
version:             0.1.0.0
synopsis:            C0 Compiler
description:         C0 Compiler
author:              Nome
maintainer:          email@domínio
category:            Language
build-type:          Simple
cabal-version:       >=1.10
                     
executable C0
  main-is:             Main.hs
  other-modules:       Lexer, Parser, AST, Typecheck, IntermCode, FinalCode
  build-tools:         alex, happy
  build-depends:       base, array, containers, mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
