
name:                LexerTest
version:             0.1.0.0
synopsis:            Lexer Test
description:         Tests if lexer is working properly
author:              Nome
maintainer:          email@domínio
category:            Language
build-type:          Simple
cabal-version:       >=1.10
                     
executable LexerTest
  main-is:             TestLexer.hs
  other-modules:       Lexer
  build-tools:         alex
  build-depends:       base, array
  hs-source-dirs:      src
  default-language:    Haskell2010
